# llm-zoomcamp-2026-hw1-agentic-rag

./: .gitignore  README.md  homework.ipynb  main.py  pyproject.toml
