[project]
name = "llm-zoomcamp-2026-hw1-agentic-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "gitsource>=0.0.5",
    "jupyter>=1.1.1",
    "minsearch>=0.1.0",
    "openai>=2.43.0",
    "pydantic-ai>=1.107.0",
    "python-dotenv>=1.2.2",
]
